--- a/app/src/main/res/values/theme_attr.xml
+++ b/app/src/main/res/values/theme_attr.xml
@@ -1,11 +1,7 @@
 <resources>
-
-    <!-- Base application theme. -->
-    <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
-        <!-- Customize your theme here. -->
-        <item name="colorPrimary">@color/colorPrimary</item>
-        <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
-        <item name="colorAccent">@color/colorAccent</item>
-    </style>
-
+   <attr name="layout_bg_normal" format="reference"/>
+   <attr name="sliding_block_bg" format="reference"/>
+   <attr name="windows_bg" format="reference"/>
+   <attr name="lineColor" format="reference"/>
+   <attr name="infoTextColor" format="reference"/>
 </resources>
