--- a/app/src/main/res/values/theme.xml
+++ b/app/src/main/res/values/theme.xml
@@ -1,11 +1,36 @@
 <resources>
 
+    <!-- 日间模式 -->
+    <style name="AppTheme_Light" parent="AppTheme_Light.Base"/>
+
     <!-- Base application theme. -->
-    <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
+    <style name="AppTheme_Light.Base" parent="Theme.AppCompat.Light.NoActionBar">
         <!-- Customize your theme here. -->
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
+        <item name="windows_bg">@color/day_windows_bg</item>
+        <item name="lineColor">@color/day_line_color</item>
+        <item name="layout_bg_normal">@color/day_layout_bg_normal</item>
+        <item name="infoTextColor">@color/day_infoTextColor</item>
+
+        <item name="sliding_block_bg">@drawable/image_sliding_block</item>
+    </style>
+
+    <!-- 夜间模式 -->
+    <style name="AppTheme_Night" parent="AppTheme_Night.Base"/>
+    <!-- Base application theme. -->
+    <style name="AppTheme_Night.Base" parent="Theme.AppCompat.NoActionBar">
+        <!-- Customize your theme here. -->
+        <item name="colorPrimary">@color/night_colorPrimary</item>
+        <item name="colorPrimaryDark">@color/night_colorPrimaryDark</item>
+        <item name="colorAccent">@color/night_colorPrimaryDark</item>
+        <item name="windows_bg">@color/night_windows_bg</item>
+        <item name="lineColor">@color/night_line_color</item>
+        <item name="layout_bg_normal">@color/night_layout_bg_normal</item>
+        <item name="infoTextColor">@color/night_infoTextColor</item>
+
+        <item name="sliding_block_bg">@drawable/night_image_sliding_block</item>
     </style>
 
 </resources>
