--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -9,4 +9,18 @@
       <item>热点1</item>-->
    </string-array>
 
+   <string-array name="font_size">
+      <item>特大号字</item>
+      <item>大号字</item>
+      <item>中号字</item>
+      <item>小号字</item>
+   </string-array>
+
+   <string-array name="report_reason">
+      <item>广告</item>
+      <item>色情</item>
+      <item>翻墙</item>
+      <item>非IT话题</item>
+   </string-array>
+
 </resources>
